// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Overlay component should match snapshot with different overlay types 1`] = `
<div
  className="overlay"
  onClick={null}
  style={
    Object {
      "cursor": "inherit",
      "opacity": 0.5,
    }
  }
/>
`;

exports[`Overlay component should match snapshot with different overlay types 2`] = `
<div
  className="hidden_overlay"
  onClick={null}
  style={
    Object {
      "cursor": "inherit",
      "opacity": 0.5,
    }
  }
/>
`;

exports[`Overlay component should match snapshot with different overlay types 3`] = `
<div
  className="colored_overlay"
  onClick={null}
  style={
    Object {
      "cursor": "inherit",
      "opacity": 0.9,
    }
  }
/>
`;
